Add Portfolio index.html

--- a/index.html
+++ b/index.html
@@ -3,47 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>UM-E-KULSOOM - IT Student Portfolio</title>
+  <title>UM-E-KULSOOM | IT Student Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f4f6f8;
+      color: #333;
+      max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
-      background: #f9f9f9;
-      color: #333;
     }
     header {
       text-align: center;
       margin-bottom: 40px;
     }
     header h1 {
-      margin-bottom: 5px;
       color: #2c3e50;
+      margin-bottom: 8px;
     }
     header p {
-      font-style: italic;
       color: #555;
+      margin: 4px;
     }
     section {
+      background: #fff;
+      padding: 20px;
       margin-bottom: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
     h2 {
-      border-bottom: 2px solid #2980b9;
+      border-bottom: 2px solid #3498db;
       padding-bottom: 5px;
-      color: #2980b9;
+      color: #3498db;
     }
     ul {
-      list-style-type: square;
       padding-left: 20px;
-    }
-    footer {
-      text-align: center;
-      font-size: 0.9em;
-      color: #999;
-      margin-top: 40px;
-      border-top: 1px solid #ddd;
-      padding-top: 10px;
     }
     a {
       color: #2980b9;
@@ -52,20 +47,37 @@
     a:hover {
       text-decoration: underline;
     }
+    .button {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 15px;
+      background: #3498db;
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+    }
+    .button:hover {
+      background: #2c80b9;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9em;
+      color: #999;
+      margin-top: 40px;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>UM-E-KULSOOM</h1>
     <p>IT Student | Aspiring Intern</p>
-    <p>Lahore, Pakistan | <a href="mailto:ume.tech25@email.com">ume.tech25@email.com</a></p>
+    <p>Lahore, Pakistan | <a href="mailto:ume.tech25@gmail.com">ume.tech25@gmail.com</a></p>
   </header>
 
   <section>
     <h2>About Me</h2>
     <p>
-      Motivated IT student currently pursuing Post ADP-IT from University of Education, Lahore. Passionate about technology,
-      eager to learn, and seeking an internship opportunity to apply and grow my skills in programming, networking, and digital marketing.
+      I’m a motivated IT student currently pursuing Post ADP-IT from University of Education, Lahore. Passionate about technology and eager to grow in the fields of web development, networking, and digital marketing.
     </p>
   </section>
 
@@ -74,25 +86,38 @@
     <ul>
       <li>Digital Marketing – Lahore College for Women University (LCWU)</li>
       <li>Web Development – Punjab University</li>
-      <li>Networking Essentials – Cisco Networking Academy Program</li>
+      <li>Networking Essentials – Cisco Networking Academy</li>
     </ul>
   </section>
 
   <section>
     <h2>Experience</h2>
-    <p><strong>Community Manager – ADX Company (Online)</strong></p>
-    <p>
-      Worked for 1 year managing online communities, engaging users, and handling digital communication channels.
-    </p>
+    <p><strong>Community Manager – ADX Company (Online)</strong><br>
+    Managed and engaged an online community for over a year, improving user engagement and handling digital communication platforms.</p>
+  </section>
+
+  <section>
+    <h2>Projects</h2>
+    <p>No live projects yet – still learning and exploring web development!</p>
+    <ul>
+      <li>💡 Coming soon: My personal blog</li>
+      <li>💡 Coming soon: Portfolio redesign with contact form</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Resume</h2>
+    <p>Click the button below to download my latest resume:</p>
+    <a class="button" href="UM-E-KULSOOM-Resume.pdf" download>Download Resume</a>
   </section>
 
   <section>
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:ume.tech25@email.com">ume.tech25@email.com</a></p>
+    <p>Email: <a href="mailto:ume.tech25@gmail.com">ume.tech25@gmail.com</a></p>
   </section>
 
   <footer>
-    &copy; 2025 UM-E-KULSOOM
+    &copy; 2025 UM-E-KULSOOM | All rights reserved
   </footer>
 </body>
 </html>
